# fastapi_kurs_1

./: crud.py  db.sqlite3  items_views.py  main.py  package-lock.json  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_08_26_1758-7b6b3700e127_create_products_table.py  2025_08_27_1155-38ed8be7e992_create_users_table.py  2025_08_27_1217-150dde73d46f_create_posts_table.py  2025_08_28_0947-5dfe441b41ca_create_profile_table.py  2025_08_28_1125-94682a8d6561_profile_lastname_name_last_name.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
